[package]
name = "oxypp"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tungstenite = "*"              # A WebSocket (RFC6455) library for Rust.
serde={version="1.0",features=["derive"]}
serde_json="1.0"
regex="1"